android libstml 支持x86 平台

--- a/android/react-native-stml/build.gradle
+++ b/android/react-native-stml/build.gradle
@@ -67,7 +67,7 @@ model {
 
             ldLibs.add("z")
 //            ldLibs.add("log")
-            abiFilters.addAll(['armeabi-v7a'])
+            abiFilters.addAll(['armeabi-v7a', 'x86'])
         }
     }
 }
