--- a/android/react-native-stml/build.gradle
+++ b/android/react-native-stml/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.model.library'
 
+def root_path = '../..'
+
 model {
     android {
         compileSdkVersion 23
@@ -27,47 +29,53 @@ model {
                 jni {
                     source {
                         srcDirs = [
-                                "../../deps/djinni/support-lib/jni",
-                                "../../deps/cryptopp",
-                                "../../generated-src/cpp",
-                                "../../generated-src/jni",
-                                "../../src"
+                                "${root_path}/deps/djinni/support-lib/jni",
+                                "${root_path}/deps/cryptopp",
+                                "${root_path}/generated-src/cpp",
+                                "${root_path}/generated-src/jni",
+                                "${root_path}/src",
+                                "${root_path}/deps/json11"
                         ]
+
+                        excludes = ["${root_path}/deps/json11/test.cpp"]
+
                     }
                 }
 
                 java {
                     source {
                         srcDirs = [
-                                "../../generated-src/java",
+                                "${root_path}/generated-src/java",
                                 "src/main/java"
                         ]
                     }
                 }
             }
         }
+
         ndk {
             toolchain = "gcc"
             toolchainVersion = "4.9"
             moduleName = "stml"
             stl = "gnustl_static"
             platformVersion = 16
-            cppFlags.add("-std=gnu++11")
+            cppFlags.add("-std=c++11")
             cppFlags.add("-fexceptions")
             cppFlags.add("-frtti")
             cppFlags.add("-DASIO_STANDALONE")
             cppFlags.add("-DOS_ANDROID")
-            cppFlags.add("-I${file("../../deps")}".toString())
-            cppFlags.add("-I${file("../../deps/asio/include")}".toString())
-            cppFlags.add("-I${file("../../deps/djinni/support-lib")}".toString())
-            cppFlags.add("-I${file("../../deps/djinni/support-lib/jni")}".toString())        // djinni src
-            cppFlags.add("-I${file("../../generated-src/cpp")}".toString())               // app generated-src
-            cppFlags.add("-I${file("../../generated-src/jni")}".toString())                   // app generated-src
-            cppFlags.add("-I${file("../../src")}".toString())
+            cppFlags.add("-I${file("${root_path}/deps")}".toString())
+            cppFlags.add("-I${file("${root_path}/deps/json11")}".toString())
+            cppFlags.add("-I${file("${root_path}/deps/asio/include")}".toString())
+            cppFlags.add("-I${file("${root_path}/deps/djinni/support-lib")}".toString())
+            cppFlags.add("-I${file("${root_path}/deps/djinni/support-lib/jni")}".toString())        // djinni src
+            cppFlags.add("-I${file("${root_path}/generated-src/cpp")}".toString())               // app generated-src
+            cppFlags.add("-I${file("${root_path}/generated-src/jni")}".toString())                   // app generated-src
+            cppFlags.add("-I${file("${root_path}/src")}".toString())
 
             ldLibs.add("z")
 //            ldLibs.add("log")
-            abiFilters.addAll(['armeabi-v7a', 'x86'])
+            abiFilters.addAll(['armeabi-v7a'])
         }
     }
 }
