android release, stml stl改成gnu_shared

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+RELEASE_STORE_FILE=Smobiler.key
+RELEASE_STORE_PASSWORD=sunminhua
+RELEASE_KEY_ALIAS=searching-info
+RELEASE_KEY_PASSWORD=sunminhua
